Fix header and column alignment.
Using float once again to align headers and contents.
Logo added at the bottom.

--- a/css/main.css
+++ b/css/main.css
@@ -18,65 +18,18 @@ a:hover, a:focus {
     outline: none;
 }
 
-.navbar {
-    background-color: #f3f3f3;
-    border: 1px solid #ddd;
-    border-left: 0;
-    height: 40px;
-    min-height: 40px;
-    margin: 0;
-    z-index: 100;
-    width: 100%;
-}
-
-.navbar .share-icons {
-    float: right;
-    margin-right: 250px;
-}
-
-.small-multiples-header {
-    margin: 0;
-    padding: 0;
-}
-
-.small-multiples-header li {
-    float: left;
-}
-
-.cal-header {
-    background-color: white;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    display: none;
-    height: 39px;
-    width: 159px;
-    position: relative;
-    padding: 10px 0;
-    font-weight: bold;
-    color: #666;
-    text-align: center;
-    z-index: 10;
-}
-
-.cal-header.has-data {
-    display: block;
+/** Multi layer push menu ------------------------------------ */
+.scroller {
+    clear: both;
 }
 
 .scroller-inner {
   margin-bottom: 40px;
 }
 
-
-/** Multi layer push menu ------------------------------------ */
-
 .container {
     background: #f3f3f3;
 }
-
-/*
-.scroller {
-    overflow: visible;
-}*/
 
 .mp-menu {
     width: 250px;
@@ -173,8 +126,35 @@ a:hover, a:focus {
 
 
 /** Small multiples -------------------------------------------------------------------- */
+.navbar {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-left: 0;
+    height: 40px;
+    min-height: 40px;
+    margin: 0;
+    z-index: 100;
+    width: 100%;
+}
+
+.navbar .share-icons {
+    float: right;
+    margin-right: 250px;
+}
+
+.small-multiples-header {
+    border-right: 1px solid #ccc;
+    float: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .small-multiples {
-    border-right: 1px solid #DDD;
+    background-color: white;
+    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    display: inline-block;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -185,54 +165,51 @@ a:hover, a:focus {
 
 /** hide columns when no space is available */
 @media only screen and (max-width: 1300px) {
-    .small-multiples-header li:nth-child(7),
-    table.small-multiples td:nth-child(7),
-    table.small-multiples th:nth-child(7) {display: none;}
+    .cal-header:nth-child(7),
+    .cal-wrapper:nth-child(7) {display: none;}
 }
 @media only screen and (max-width: 1140px) {
-    .small-multiples-header li:nth-child(6),
-    table.small-multiples td:nth-child(6),
-    table.small-multiples th:nth-child(6) {display: none;}
+    .cal-header:nth-child(6),
+    .cal-wrapper:nth-child(6) {display: none;}
 }
 @media only screen and (max-width: 980px) {
-    .small-multiples-header li:nth-child(5),
-    table.small-multiples td:nth-child(5),
-    table.small-multiples th:nth-child(5) {display: none;}
+    .cal-header:nth-child(5),
+    .cal-wrapper:nth-child(5) {display: none;}
 }
 @media only screen and (max-width: 820px) {
-    .small-multiples-header li:nth-child(4),
-    table.small-multiples td:nth-child(4),
-    table.small-multiples th:nth-child(4) {display: none;}
+    .cal-header:nth-child(4),
+    .cal-wrapper:nth-child(4) {display: none;}
 }
 @media only screen and (max-width: 600px) {
-    .small-multiples-header li:nth-child(3),
-    table.small-multiples td:nth-child(3),
-    table.small-multiples th:nth-child(3) {display: none;}
+    .cal-header:nth-child(3),
+    .cal-wrapper:nth-child(3) {display: none;}
+}
+@media only screen and (max-width: 450px) {
+    .cal-header:nth-child(2),
+    .cal-wrapper:nth-child(2) {display: none;}
 }
 
-td.cal-wrapper:first-child .ch-tooltip {
-    margin-left: 30px;
+.cal-header, .cal-wrapper {
+    float: left;
+    width: 159px;
+    display: none;
 }
 
-td.cal-wrapper:first-child .ch-tooltip::after {
-    left: 17px;
-    margin-left: 17px;
+.cal-header.has-data, .cal-wrapper.has-data {
+    display: block;
 }
 
-td.cal-wrapper:not(:first-child) .ch-tooltip {
-    white-space: nowrap;
-    width: auto;
+.cal-header {
+    border-left: 1px solid #ddd;
+    padding: 10px 0;
+    font-weight: bold;
+    color: #666;
+    text-align: center;
 }
 
 .cal-wrapper {
-    border-right: 1px solid #eee;
-    background-color: white;
-    vertical-align: top;
-    visibility: hidden;
-}
-
-.cal-wrapper.has-data {
-    visibility: visible;
+    border-left: 1px solid #eee;
+    padding: 0;
 }
 
 .cal-wrapper .secondary-label {
@@ -245,8 +222,24 @@ td.cal-wrapper:not(:first-child) .ch-tooltip {
     font-weight: 400;
 }
 
-.cal-wrapper .city-cal {
+/** we need this to apply padding around the cal-wrapper without breaking the tooltip */
+.placeholder-wrapper {
     padding: 25px 25px;
+}
+
+/** fix the tooltip ---- */
+.cal-wrapper:first-child .ch-tooltip {
+    margin-left: 30px;
+}
+
+.cal-wrapper:first-child .ch-tooltip::after {
+    left: 17px;
+    margin-left: 17px;
+}
+
+.cal-wrapper:not(:first-child) .ch-tooltip {
+    white-space: nowrap;
+    width: auto;
 }
 
 .cal-heatmap-container .graph-label {
@@ -254,8 +247,30 @@ td.cal-wrapper:not(:first-child) .ch-tooltip {
     font-weight: 400;
 }
 
-.cal-heatmap-container {
-    width: 106px;
+.logo-bottom {
+    background-color: white;
+    border-top: 1px solid #eee;
+    clear: both;
+    padding: 20px;
+    text-align: center;
+}
+
+.logo-bottom h3 {
+    display: none;
+    text-transform: uppercase;
+    color: rgb(183,183,183);
+    font-size: 1em;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.logo-bottom img {
+    width: 150px;
+    opacity: 0.5;
+}
+
+.logo-bottom img:hover {
+    opacity: 0.8;
 }
 
 /* Metric colors */
